--- a/app/views/register.xml
+++ b/app/views/register.xml
@@ -2,7 +2,7 @@
 	<Window id="mainWindow" title="产品质量追溯系统" >
 		<View id="tabContainer" class="t-0 b-0"  >
 			<Require id="navBar" type="widget" src="edu.uwm.navBar" text="注册"></Require>
-			<Widget id="paging" src="de.manumaticx.pagingcontrol" />
+			<Widget id="paging" src="de.manumaticx.pagingcontrol" findScrollableView="false" />
 			<ScrollableView id="scrollableView">
 				<View title="用户" >
 					<View class="lo-v w-80% h-size">
